# Rhodium

./: .gitignore  INSTALL.md  MANIFEST.in  README.md  Rhodium.ipynb  example.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: examples.yml  release.yml  test-and-publish.yml  tests.yml
examples/: README.md  speedTest.py
examples/Basic/: README.md  dps_example.py  example.py  example_decorators.py  example_parallelization.py  sensitivity_analysis.py  visualization_with_J3.py
examples/C/: Makefile  README.md  lakeModelInC.py
examples/C/src/: main-lake.cpp
examples/Eijgenraam/: README.md  eijgenraam.py  eijgenraam_mordm.py
examples/Languages/: README.md  speedComparison.py
examples/Languages/C/: Makefile  README.md  lakeModelInC.py
examples/Languages/C/src/: boostutil.h  generate-scenarios.h
examples/Languages/Excel/: LakeProblem.xlsx  README.md  lakeModelInExcel.py
examples/Languages/Python/: README.md  lakeModelInPython.py
examples/Languages/R/: README.md  lake.R  lakeModelInR.py
examples/Python/: lakeModelInPython.py
examples/R/: lakeModel.py  lakeModelInR.py
rhodium/: README.md  __init__.py  brush.py  cache.py  classification.py  config.py  decorators.py  excel.py  expr.py  ffi.py  find.py  io.py  model.py  openmdao.py  optimization.py  plot.py  rbridge.py  robustness.py  sa.py  sampling.py  test.py  utils.py
rhodium/test/: TestGetItem.xlsx  TestModel.xlsx  TestSetItem.xlsx  brush_test.py  cache_test.py  decorators_test.py  excel_test.py  ffi_test.py  model_test.py  openmdao_test.py  optimization_test.py  optimize_test.py  plot_to_savefig.py  sampling_test.py  test.c
